--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import './reset.css';
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #282c34;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -14,8 +19,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,8 +28,15 @@
   color: white;
 }
 
+.App-footer {
+  height: 80px;
+  a {
+    color: #fff;
+  }
+}
+
 .App-link {
-  color: #61dafb;
+  
 }
 
 @keyframes App-logo-spin {
