--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,8 @@
 
 .App-footer {
   position: relative;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 30px 0;
+  text-align: center;
 }
 .App-footer .link {
   cursor: pointer;
