feat: 增加知识框架图链接

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,10 @@
   padding: 30px 0;
   text-align: center;
 }
-.App-footer .link {
+.mb-20 {
+  margin-bottom: 20px;
+}
+.link {
   cursor: pointer;
   color: #fff;
   text-decoration: underline;
