--- a/src/App.css
+++ b/src/App.css
@@ -19,15 +19,20 @@
 }
 
 .App-header {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  justify-content: center;
+}
+.App-content {
   flex: 1;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 32px;
 }
-
 .App-footer {
   position: relative;
   padding: 30px 0;
